<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".TipActivity">

    <ImageView
            android:id="@+id/icon_cost_of_service"
            android:src="@drawable/ic_baseline_store_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="@id/text_field"
            app:layout_constraintBottom_toBottomOf="@id/text_field"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:hint="@string/cost_of_service">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_baseline_room_service_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view"
            app:layout_constraintBottom_toBottomOf="@id/text_view"/>

    <TextView
            android:id="@+id/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_service"
            android:textSize="20sp"
            style="@style/Widget.TipTime.TextView"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_field"
            app:layout_constraintStart_toEndOf="@id/icon_service_question"/>

    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.TipTime.CompoundButton.RadioButton"
            app:layout_constraintTop_toBottomOf="@id/text_view"
            app:layout_constraintStart_toStartOf="@id/text_view"
            android:orientation="vertical"
            android:checkedButton="@id/option_20_percent">

        <RadioButton
                android:id="@+id/option_20_percent"
                android:text="@string/amazing_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/option_18_percent"
                android:text="@string/good_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/option_15_percent"
                android:text="@string/ok_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RadioGroup>

    <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_call_made_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/round_up_tip"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintStart_toEndOf="@id/icon_round_up"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:layout_marginStart="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch"/>

    <TextView
            android:id="@+id/tv_tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Tip Amount: $10"
            style="@style/Widget.TipTime.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_calculate"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>